# entity/external_product_entity.go
@@ -1,6 +1,11 @@
 package entity
 
-import "github.com/google/uuid"
+import (
+	"time"
+
+	"github.com/google/uuid"
+	"gorm.io/datatypes"
+)
 
 type ExternalProduct struct {
 	ID uuid.UUID `gorm:"type:uuid;primaryKey" json:"id"`
@@ -11,7 +16,13 @@ type ExternalProduct struct {
 	ProductID *uuid.UUID `gorm:"type:uuid" json:"product_id"`
 	Product   *Product   `gorm:"foreignKey:ProductID;references:ID;constraint:OnUpdate:CASCADE,OnDelete:SET NULL;"`
 
-	Price int64 `json:"price"`
+	ExternalID   string `gorm:"type:varchar(255);not null;uniqueIndex:idx_store_platform_external" json:"external_id"`
+	ExternalName string `gorm:"type:text" json:"external_name"`
+	Price        int64  `gorm:"default:0" json:"price"`
+
+	LastSyncAt *time.Time `json:"last_sync_at"`
+
+	RawPayload datatypes.JSON `gorm:"type:jsonb" json:"raw_payload"`
 
 	OrderDetails []*OrderDetail `gorm:"foreignKey:ExternalProductID"`
 
